# kernelheim

./: .gitignore  README.md  pyproject.toml
flashattention/: fa.py
how_to/benchmark_cuda_matmul/: README.md
how_to/benchmark_cuda_matmul/benchmarks/: run_benchmarks.sh
how_to/benchmark_cuda_matmul/src/: Makefile
how_to/optimize_cuda_matmul/: matmul_naive.cu  matmul_naive_square.cu  memory-access-efficiency.md
how_to/profile_in_cuda/: README.md  compile_square.py  torch_profiler.py  torch_square.py
how_to/profile_in_cuda/sample_profiler_out/: test_trace_4.json
softmax/: softmax.cu  softmax.py
